minor color changes per BDC style guide

--- a/staging.gen3.biodatacatalyst.nhlbi.nih.gov/portal/gitops.css
+++ b/staging.gen3.biodatacatalyst.nhlbi.nih.gov/portal/gitops.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-color: #c02f42;
-  --secondary-color: #6d6e70;
+  --primary-color: #c0143c;
+  --secondary-color: #616265;
   --g3-primary-btn__bg-color: #c02f42;
 }
 
